# AudioVerba

./: .gitignore  .windsurfrules  README.md  audioverba_spec.md  pyproject.toml  reverb_gpu_setup.md
src/audioverba/: main.py
src/audioverba/core/: __init__.py  conversion.py  diarization.py  exceptions.py  transcription.py  utils.py
src/audioverba/gui/: main_window.py
tests/: conftest.py
tests/core/: test_conversion.py  test_transcription.py
tests/gui/: test_main_window.py
